<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_movie"
        android:checked="true"
        android:title="Moive" />
    <item
        android:id="@+id/action_tv_show"
        android:title="Tv Show" />
</menu>