...
                        android:fontFamily="@font/mr"
                        android:maxLines="3"
                        android:text="@{movie.overview, default = Overview}"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/tvItemDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/tvOverview"
                        android:fontFamily="@font/mm"
                        android:onClick="@{()->handler.onMovieDetailsClick(movie.title)}"
                        android:text="Details"
...
